// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorsCitationView test  should render component with no contributors 1`] = `
<EditorsCitationView
  publication={Object {}}
>
  <AuthorsCitationView
    className="citationEditors"
    prefix="edited by"
    publication={Object {}}
    searchKey={
      Object {
        "key": "fez_record_search_key_contributor",
        "order": "rek_contributor_order",
        "subkey": "rek_contributor",
      }
    }
    suffix="."
  >
    <span
      className="citationEditors empty"
    />
  </AuthorsCitationView>
</EditorsCitationView>
`;

exports[`EditorsCitationView test  should render component with one contributor 1`] = `
<EditorsCitationView
  publication={
    Object {
      "fez_record_search_key_contributor": Array [
        Object {
          "rek_contributor": "Pedroso, Marcelo Monteiro",
          "rek_contributor_id": null,
          "rek_contributor_order": 1,
          "rek_contributor_pid": "UQ:678742",
        },
      ],
    }
  }
>
  <AuthorsCitationView
    className="citationEditors"
    prefix="edited by"
    publication={
      Object {
        "fez_record_search_key_contributor": Array [
          Object {
            "rek_contributor": "Pedroso, Marcelo Monteiro",
            "rek_contributor_id": null,
            "rek_contributor_order": 1,
            "rek_contributor_pid": "UQ:678742",
          },
        ],
      }
    }
    searchKey={
      Object {
        "key": "fez_record_search_key_contributor",
        "order": "rek_contributor_order",
        "subkey": "rek_contributor",
      }
    }
    suffix="."
  >
    <span
      className="citationEditors"
    >
      edited by
      <span
        className="citationAuthor"
      >
        Pedroso, Marcelo Monteiro
         
      </span>
      .
    </span>
  </AuthorsCitationView>
</EditorsCitationView>
`;

exports[`EditorsCitationView test  should render component with three contributors 1`] = `
<EditorsCitationView
  publication={
    Object {
      "fez_record_search_key_contributor": Array [
        Object {
          "rek_contributor": "Pedroso, Marcelo Monteiro",
          "rek_contributor_id": null,
          "rek_contributor_order": 1,
          "rek_contributor_pid": "UQ:678742",
        },
        Object {
          "rek_contributor": "Smith, J",
          "rek_contributor_id": null,
          "rek_contributor_order": 2,
          "rek_contributor_pid": "UQ:678742",
        },
        Object {
          "rek_contributor": "Andersen, J",
          "rek_contributor_id": null,
          "rek_contributor_order": 3,
          "rek_contributor_pid": "UQ:678742",
        },
      ],
    }
  }
>
  <AuthorsCitationView
    className="citationEditors"
    prefix="edited by"
    publication={
      Object {
        "fez_record_search_key_contributor": Array [
          Object {
            "rek_contributor": "Pedroso, Marcelo Monteiro",
            "rek_contributor_id": null,
            "rek_contributor_order": 1,
            "rek_contributor_pid": "UQ:678742",
          },
          Object {
            "rek_contributor": "Smith, J",
            "rek_contributor_id": null,
            "rek_contributor_order": 2,
            "rek_contributor_pid": "UQ:678742",
          },
          Object {
            "rek_contributor": "Andersen, J",
            "rek_contributor_id": null,
            "rek_contributor_order": 3,
            "rek_contributor_pid": "UQ:678742",
          },
        ],
      }
    }
    searchKey={
      Object {
        "key": "fez_record_search_key_contributor",
        "order": "rek_contributor_order",
        "subkey": "rek_contributor",
      }
    }
    suffix="."
  >
    <span
      className="citationEditors"
    >
      edited by
      <span
        className="citationAuthor"
      >
        Pedroso, Marcelo Monteiro
        , 
      </span>
      <span
        className="citationAuthor"
      >
        Smith, J
         and 
      </span>
      <span
        className="citationAuthor"
      >
        Andersen, J
         
      </span>
      .
    </span>
  </AuthorsCitationView>
</EditorsCitationView>
`;

exports[`EditorsCitationView test  should render component with two contributors 1`] = `
<EditorsCitationView
  publication={
    Object {
      "fez_record_search_key_contributor": Array [
        Object {
          "rek_contributor": "Pedroso, Marcelo Monteiro",
          "rek_contributor_id": null,
          "rek_contributor_order": 1,
          "rek_contributor_pid": "UQ:678742",
        },
        Object {
          "rek_contributor": "Smith, J",
          "rek_contributor_id": null,
          "rek_contributor_order": 2,
          "rek_contributor_pid": "UQ:678742",
        },
      ],
    }
  }
>
  <AuthorsCitationView
    className="citationEditors"
    prefix="edited by"
    publication={
      Object {
        "fez_record_search_key_contributor": Array [
          Object {
            "rek_contributor": "Pedroso, Marcelo Monteiro",
            "rek_contributor_id": null,
            "rek_contributor_order": 1,
            "rek_contributor_pid": "UQ:678742",
          },
          Object {
            "rek_contributor": "Smith, J",
            "rek_contributor_id": null,
            "rek_contributor_order": 2,
            "rek_contributor_pid": "UQ:678742",
          },
        ],
      }
    }
    searchKey={
      Object {
        "key": "fez_record_search_key_contributor",
        "order": "rek_contributor_order",
        "subkey": "rek_contributor",
      }
    }
    suffix="."
  >
    <span
      className="citationEditors"
    >
      edited by
      <span
        className="citationAuthor"
      >
        Pedroso, Marcelo Monteiro
         and 
      </span>
      <span
        className="citationAuthor"
      >
        Smith, J
         
      </span>
      .
    </span>
  </AuthorsCitationView>
</EditorsCitationView>
`;
